# publish-tools

./: .gitignore  .python-version  README.md  TODO.md  pack_pages.py  publish_lib.py  pyproject.toml  requirements.txt  setup.py
.devcontainer/: devcontainer.json
.github/: renovate.json
.github/workflows/: build.yml  update_dependencies.yml
scripts/: build_test_docker_image.py  build_test_image.py  create_vault_key.py  init.py  install_dependencies.sh  pack_test_pages.py  publish_lib.py  publish_test_mvn_package.py  publish_test_npm_package.py
src/: ansible_utils.py  docker_utils.py  github_utils.py  mvn_utils.py  npm_utils.py  package.json  pom.xml  settings.xml  version_utils.py
src/template/: pom.xml
vars/: vault.yaml
