[project]
name = "publish_tools"
version = "0.0.1"
dependencies = [
  "ansible == 8.6.1",
  "requests == 2.31.0"
]

[[project.authors]]
name = "Igor Bari"
email = "mucsi96@gmail.com"

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel.force-include]
src = "publish_tools"
