[project]
name = "publish_tools"
version = "0.0.1"
dependencies = [
  "ansible ==9.6.0",
  "requests ==2.32.3"
]

[[project.authors]]
name = "Igor Bari"
email = "mucsi96@gmail.com"

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel.force-include]
src = "publish_tools"
