[project]
name = "mucsi96.publish_tools"
version = "21.0.0"
description = "Publishing tools for continuous integration"
readme = "README.md"
readme-content-type = "text/markdown"
dependencies = [ "ansible ==9.9.0", "requests ==2.32.3",]
[[project.authors]]
name = "Igor Bari"
email = "mucsi96@gmail.com"

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel.force-include]
src = "publish_tools"
